updated the configs
